# ak

./: .gitignore
lib/boost_1_59_0/: CMakeLists.txt
lib/boost_1_59_0/libs/filesystem/src/: CMakeLists.txt
lib/boost_1_59_0/libs/system/src/: CMakeLists.txt
lib/lpng1619/: CMakeLists.txt
lib/pixellight/: Apk.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  control.cpp  control.h  global.cpp  global.h  resources.cpp  resources.h
src/client/gfx/: CMakeLists.txt  Engine.cpp  Engine.h  Font.cpp  Font.h  GraphicsComponent.cpp  GraphicsComponent.h  IEngine.h  Texture.h  oglincludes.h  pngLoader.cpp  pngLoader.h
src/client/main/: CMakeLists.txt  Engine.cpp  Engine.h  GameState.h  IAppInterface.h  IEngineControl.h  IGameState.h  INativeInterface.h  NativeAndroid.cpp  NativeAndroid.h  NativePosix.cpp  NativePosix.h  ResourceManager.cpp  ResourceManager.h  appAndroid.cpp  appPosix.cpp
src/client/state/: GameState.h
src/common/: CMakeLists.txt  types.h
src/common/cabinet/: AndroidAssetFile.cpp  AndroidAssetFile.h  CMakeLists.txt  CabManager.cpp  CabManager.h  Cabinet.cpp  Cabinet.h  CreateCabinet.cpp  CreateCabinet.h  File.cpp  File.h  JavaRandom.cpp  JavaRandom.h  MemoryFile.cpp  MemoryFile.h  PosixFile.cpp  PosixFile.h
src/common/log/: CMakeLists.txt  log.cpp  log.h
src/common/util/: CMakeLists.txt  TestUTF8String.cpp  UTF8String.cpp  UTF8String.h  clock with boost.h  clock.cpp  clock.h  clock_posix.h  clock_windows.h  typeconversions.cpp  typeconversions.h
src/projects/: CMakeLists.txt
src/projects/akcab/: CMakeLists.txt  akcab.cpp
src/projects/animview/: CMakeLists.txt  StringWindows.h  wingl.cpp
src/projects/ogltest/: AndroidManifest.xml  CMakeLists.txt  GameControl.h  IGameControl.h  OGLTest.cpp  OGLTest.h  mainAndroid.cpp  mainPosix.cpp  multitest1.rc  pngLoader.cpp  pngLoader.h  resourcelist.cpp  resourcelist.h  winmain.cpp
src/projects/ogltest/android/: AndroidApp.cpp  AndroidApp.h  AndroidManifest.xml  IAndroidApp.h  LoadLibraries.java  LoadLibraries.java.in  main.cpp
src/projects/ogltest/data/: log.txt  test.ak
src/projects/ogltest/data/assets/: fontdesc02.txt  fontdesc03.txt  fontdesc04.txt
src/projects/ogltest/data/startup/: font08.png+  fontdesc00.txt  fontdesc01.txt  fontdesc02.txt  fontdesc03.txt  fontdesc04.txt
src/projects/ogltest/linux/: main.cpp
src/projects/ogltest/state/: CMakeLists.txt  GameStateDialog.cpp  GameStateDialog.h
src/projects/ogltest/win/: StringWindows.h  multitest1.rc  wingl.cpp  wingl.h  winmain.cpp
