# List of all available boost libraries
#add_subdirectory(libs/atomic/src)
#add_subdirectory(libs/chrono/src)
#add_subdirectory(libs/container/src)
#add_subdirectory(libs/context/src)
#add_subdirectory(libs/coroutine/src)
#add_subdirectory(libs/date_time/src)
#add_subdirectory(libs/exception/src)

#add_definitions(-DBOOST_FILESYSTEM_SOURCE)
add_subdirectory(libs/filesystem/src)

#add_subdirectory(libs/graph/src)
#add_subdirectory(libs/graph_parallel/src)
#add_subdirectory(libs/iostreams/src)
#add_subdirectory(libs/locale/src)
#add_subdirectory(libs/log/src)
#add_subdirectory(libs/math/src)
#add_subdirectory(libs/mpi/src)
#add_subdirectory(libs/program_options/src)
#add_subdirectory(libs/python/src)
#add_subdirectory(libs/random/src)
#add_subdirectory(libs/regex/src)
#add_subdirectory(libs/serialization/src)
#add_subdirectory(libs/signals/src)
#add_subdirectory(libs/smart_ptr/src)

#add_definitions(-DBOOST_SYSTEM_SOURCE)
add_subdirectory(libs/system/src)

#add_subdirectory(libs/test/src)
#add_subdirectory(libs/thread/src)
#add_subdirectory(libs/timer/src)
#add_subdirectory(libs/wave/src)
